Name:                Grempa
Version:             0.1.0
Synopsis:            Embedded grammar DSL and LALR parser generator
Description:
    A library for expressing programming language grammars in a form similar
    to BNF, which is extended with the semantic actions to take when
    a production has been parsed. The grammars are typed and are to be be used
    with the LALR parser generator, also part of the library, which can
    generate a parser for the language either at compile time using Template
    Haskell, producing fast parsers with no initial overhead, or dynamically,
    which has the initial overhead of generating the parser, but can be used
    for example when the grammar depends on an input.
License:             BSD3
License-file:        LICENSE
Author:              Olle Fredriksson
Maintainer:          fredriksson.olle@gmail.com
Copyright:           (c) 2010 Olle Fredriksson
Stability:           Experimental
Category:            Parsing
Build-type:          Simple
Extra-source-files:  README.lhs, READMEStatic.lhs examples/*.hs examples/Test.fs
Cabal-version:       >=1.2
Library
    Build-depends:   array            == 0.3.*
                   , base             == 4.2.*
                   , containers       == 0.3.*
                   , monads-fd        == 0.1.*
                   , template-haskell == 2.4.*
                   , th-lift          == 0.5.*
    Exposed-modules: Data.Parser.Grempa.Grammar
                   , Data.Parser.Grempa.Static
                   , Data.Parser.Grempa.Dynamic
                   --, Text.Grempa.Parser.Graph
    Other-modules:   Data.Parser.Grempa.Aux.Aux
                   , Data.Parser.Grempa.Aux.MultiMap
                   , Data.Parser.Grempa.Grammar.Token
                   , Data.Parser.Grempa.Grammar.Typed
                   , Data.Parser.Grempa.Grammar.Untyped
                   , Data.Parser.Grempa.Parser.Driver
                   , Data.Parser.Grempa.Parser.Dynamic
                   , Data.Parser.Grempa.Parser.Item
                   , Data.Parser.Grempa.Parser.LALR
                   , Data.Parser.Grempa.Parser.Result
                   , Data.Parser.Grempa.Parser.SLR
                   , Data.Parser.Grempa.Parser.Static
                   , Data.Parser.Grempa.Parser.Table
    Extensions:    GADTs
    GHC-Options:   -Wall
